--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     testImplementation 'mysql:mysql-connector-java:8.0.33'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
-    testImplementation 'com.codeborne:selenide-testng:6.13.0'
+    testImplementation 'com.codeborne:selenide:6.13.0'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
 }
 
