--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     testImplementation 'io.qameta.allure:allure-selenide:2.20.1'
     testImplementation 'com.codeborne:selenide:6.13.0'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
+    testImplementation 'org.postgresql:postgresql:42.6.0'
 }
 
 test {
